Added swagger doc for profile api; added docker-down to makefile; update swagger docs
